Fix off center modal

--- a/lms/static/sass/course/instructor/_instructor_2.scss
+++ b/lms/static/sass/course/instructor/_instructor_2.scss
@@ -291,16 +291,16 @@
     }
 }
 
+.sensitive-data-modal{
+  color:#555;
+  padding: 60px;
+  line-height: 1.9;
+}
+
 .modal_close{
   position: absolute;
   display: block;
   z-index: 2;
-}
-
-.dataDisclaimer-modal{
-  color:#555;
-  padding: 60px;
-  line-height: 1.9;
 }
 
 // elements - general
